Add new slide animation

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
+  <meta name="description" content="The Browser as a Medium talk by Matthew Curtis" />
+  <title>The Browser as a Medium</title>
 
   <link href="https://fonts.googleapis.com/css?family=Cardo:400,700&display=swap" rel="stylesheet">
 </head>
